# imp

./: .env.example  .gitignore  .oxfmtrc.jsonc  Cargo.toml  Containerfile.test  LICENSE  README.md  _test_fetch_basic.txt  test_circular.ts  test_json_simple.ts  test_minimal.ts  test_two.ts  todo.txt
.cargo/: config.toml
crates/chrono/: Cargo.toml
crates/chrono/src/: date.rs  datetime.rs  duration.rs  error.rs  human_parse.rs  lib.rs  module.rs  prelude.rs  time.rs
crates/clap/: Cargo.toml
crates/clap/src/: arg_params.rs  error.rs  lib.rs  prelude.rs
crates/cli/: Cargo.toml
crates/cli/src/: embedded_run.rs  error.rs  event_loop.rs  main.rs  prelude.rs  setup.rs  tracing_init.rs
crates/cli/tests/: .oxfmtrc.jsonc  assert.ts  bench_filehandle.ts  bench_nodejs.mjs  bench_read_into.ts  helper.ts  imp.d.ts  imp_fs_filehandle.ts  imp_fs_glob.ts  imp_fs_large_file.ts  imp_fs_readfile.ts  imp_inq.ts  imp_inquire.ts  package.json  pnpm-lock.yaml  rs_string_interop_test.ts  rs_string_test.ts  rs_test.ts  test_clap.ts  test_clap_args.ts  test_clap_args_empty.ts  test_clap_help.ts  test_dynamic_import.ts  test_fetch.ts  test_fetch_file.ts  test_import_failures.ts  test_import_types.ts  test_inq_inject.ts  test_json_import.ts  test_parsers_json.ts  test_stdin.ts  test_stdin_simulate.ts  test_text_import.ts  test_time.ts  test_top_level_await.ts  test_url.ts  test_url_diag.ts  test_url_props.ts  test_url_stringarg.ts  test_write.ts  (+3 more)
crates/cli/tests/bench/: harness.mjs  harness.ts  imp_filehandle.ts  imp_read_into.ts  imp_walk.ts  json_parse.ts  node_filehandle.mjs  node_walk.mjs  parsers_compare.ts  url_bench.mjs  yaml_parse.ts
crates/cli/tests/clap/: index.ts  smoke.ts  test_clap.ts  test_clap_args.ts  test_clap_args_empty.ts  test_clap_help.ts  test_clap_types.ts
crates/cli/tests/crypto/: index.ts  test_aes.ts  test_compare.ts  test_hmac.ts  test_random.ts
crates/cli/tests/data/: bad.json  config.json  noext  noext.d.ts  readme.md  readme.txt
crates/cli/tests/encoding/: index.ts  test_base64.ts  test_empty.ts  test_hex.ts  test_uri.ts  test_utf8.ts
crates/cli/tests/env/: index.ts  test_dotenv.ts  test_empty.ts  test_ini.ts  test_loadfile.ts  test_merge_expand.ts
crates/cli/tests/fetch/: index.ts  test_fetch.ts  test_fetch_file.ts  test_fetch_streams.ts
crates/cli/tests/fs/: imp_fs_filehandle.ts  imp_fs_glob.ts  imp_fs_large_file.ts  imp_fs_readfile.ts  index.ts  test_bb_write.ts  test_chmod.ts  test_expand_home.ts  test_remove.ts  test_symlink.ts  test_write.ts
crates/cli/tests/fs.tmp_symlink/: bad_link.txt  file_link.txt
crates/cli/tests/hash/: index.ts  test_blake3.ts  test_buffer.ts  test_empty.ts  test_md5.ts  test_sha1.ts  test_sha256.ts  test_sha256_string.ts  test_sha512.ts
crates/cli/tests/inquire/: index.ts  test_inq_inject.ts  test_stdin.ts  test_stdin_simulate.ts
crates/cli/tests/parsers/: index.ts  test_csv.ts  test_json.ts  test_msgpack.ts  test_ron.ts  test_toml.ts  test_xml.ts  test_yaml.ts
crates/cli/tests/process/: test_process.ts  test_process_exit.ts  test_process_exit_listener.ts
crates/cli/tests/regress/: index.ts
crates/cli/tests/rs_string/: index.ts  rs_string_interop_test.ts  rs_string_test.ts
crates/cli/tests/signal/: test_signal.ts
crates/cli/tests/smoke/: index.ts  some_module.ts  test_fs_promises.ts  test_imp_fs.ts  test_meta.ts  test_path.ts  text.txt
crates/cli/tests/subprocess/: index.ts  test_empty.ts  test_run.ts
crates/cli/tests/time/: index.ts  test_time.ts  timers_test.ts
crates/cli/tests/url/: index.ts  test_url.ts  test_url_diag.ts  test_url_props.ts  test_url_stringarg.ts
crates/console/: Cargo.toml
crates/console/src/: lib.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: aes.rs  common.rs  compare.rs  error.rs  hmac.rs  lib.rs  module.rs  random.rs
crates/embed/: Cargo.toml
crates/embed/src/: lib.rs
crates/encoding/: Cargo.toml
crates/encoding/src/: base64.rs  error.rs  hex.rs  lib.rs  module.rs  options.rs  uri.rs  utf8.rs
crates/env/: Cargo.toml
crates/fetch/: Cargo.toml
crates/fetch/src/: client.rs  error.rs  fetch.rs  file_fetch.rs  headers.rs  lib.rs  request.rs  response.rs  stream_body.rs  url.rs
crates/ffi_extra/: Cargo.toml
crates/fs/: Cargo.toml
crates/fs/src/: encoding.rs  error.rs  lib.rs  module.rs  prelude.rs  read.rs
crates/fs/src/imp/: dir.rs  expand_home.rs  file_handle.rs  fs_stats.rs  glob.rs  mod.rs  read.rs  walk.rs  write.rs
crates/hash/: Cargo.toml
crates/hash/src/: blake3.rs  common.rs  error.rs  lib.rs  md5.rs  module.rs  options.rs  sha1.rs  sha2.rs
crates/inq/: Cargo.toml
crates/inq/src/: error.rs  lib.rs  module.rs  prelude.rs  prompts.rs
crates/js_core/: Cargo.toml
crates/js_core/src/: abort.rs  assert.rs  bundler.rs  byte_buffer.rs  coerce.rs  error.rs  lib.rs  loader.rs  meta.rs  modules.rs  object.rs  performance.rs  re_export.rs  resolver.rs  rs_string.rs  timers.rs  typescript.rs  utils.rs
crates/js_core/src/streams/: mod.rs  pipe.rs  readable.rs  strategies.rs
crates/js_core/src/utils/: convert.rs  date.rs  duration_arg.rs  mod.rs  string.rs  string_arg.rs
crates/js_error_derive/: Cargo.toml
crates/js_inquire/: Cargo.toml
crates/js_module_derive/: Cargo.toml
crates/js_path/: Cargo.toml
crates/os-path/: Cargo.toml
crates/parsers/: Cargo.toml
crates/parsers/src/: convert.rs  convert_toml.rs  csv.rs  error.rs  json.rs  lib.rs  module.rs  msgpack.rs  prelude.rs  ron.rs  toml.rs  xml.rs  yaml.rs
crates/process/: Cargo.toml
crates/signal/: Cargo.toml
crates/subprocess/: Cargo.toml
crates/subprocess/src/: error.rs  lib.rs  module.rs  options.rs  run.rs
crates/sys/: Cargo.toml
crates/url/: Cargo.toml
examples/: README.md  imp.d.ts  tsconfig.json
examples/config-convert/: README.md  main.ts
examples/csv-stats/: README.md  main.ts
examples/fetch-demo/: README.md  main.ts
examples/file-organizer/: README.md  main.ts
examples/log-tail/: README.md  main.ts
examples/md-to-html/: README.md  main.ts
examples/scaffold/: README.md  main.ts
scripts/: build.ts  imp.d.ts  install.sh  lib.ts  release.ts
(+71 files in other folders)
