[workspace]
members = ["crates/cli", "crates/js_core", "crates/fs"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Andrei Avsenin <snatlip48@gmail.com>"]

[workspace.dependencies]
rquickjs = { version = "0.12.0", features = ["full-async", "macro", "loader"] }
clap = { version = "4.6.1", features = ["color", "derive"] }
tokio = { version = "1.52.3", features = [
  "process",
  "fs",
  "rt-multi-thread",
  "macros",
] }
thiserror = { version = "2.0.18", features = ["std"] }

js_core = { path = "crates/js_core" }
fs = { path = "crates/fs" }
