[workspace]
members = [
  "crates/cli",
  "crates/js_core",
  "crates/fs",
  "crates/console",
  "crates/process",
  "crates/os-path",
  "crates/js_path",
  "crates/inq",
  "crates/js_error_derive",
  "crates/sys",
  "crates/clap",
  "crates/embed",
]
resolver = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Andrei Avsenin <snatlip48@gmail.com>"]

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150" }
serde_yml = { version = "0.0.13" }
toml = { version = "1.1.2+spec-1.1.0", features = ["serde"] }
quick-xml = { version = "0.40.1", features = [
  "serde-types",
  "serialize",
  "escape-html",
  "async-tokio",
] }
rquickjs = { version = "0.12.0", features = ["full-async", "macro", "loader"] }
clap = { version = "4.6.1", features = ["color", "derive", "string"] }
tokio = { version = "1.52.3", features = [
  "process",
  "fs",
  "io-util",
  "rt-multi-thread",
  "macros",
  "time",
] }
futures = "0.3.32"
thiserror = { version = "2.0.18", features = ["std"] }
colored = { version = "3.1.1", features = ["no-color"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
camino = { version = "1.2.2", features = [] }
chrono = "0.4.45"
libc = "0.2.186"
oxc_ast = "0.133.0"

js_core = { path = "crates/js_core" }
console = { path = "crates/console" }
fs = { path = "crates/fs" }
process = { path = "crates/process" }
os-path = { path = "crates/os-path" }
js_path = { path = "crates/js_path" }
inq = { path = "crates/inq" }
sys = { path = "crates/sys" }
js_error_derive = { path = "crates/js_error_derive" }
imp_clap = { path = "crates/clap" }
embed = { path = "crates/embed" }
