[workspace]
members = [
  "crates/cli",
  "crates/js_core",
  "crates/js_module_derive",
  "crates/chrono",
  "crates/fs",
  "crates/console",
  "crates/process",
  "crates/os-path",
  "crates/js_path",
  "crates/inq",
  "crates/js_error_derive",
  "crates/sys",
  "crates/clap",
  "crates/embed",
  "crates/parsers",
  "crates/fetch",
  "crates/url",
  "crates/subprocess",
  "crates/encoding",
  "crates/env",
  "crates/ffi_extra",
  "crates/hash",
  "crates/signal",
  "crates/crypto",
]
resolver = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Andrei Avsenin <snatlip48@gmail.com>"]

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150" }
serde_yml = { package = "yaml_serde", version = "0.10.4" }
toml = { version = "1.1.2", features = ["serde"] }
quick-xml = { version = "0.40.1", features = ["serde-types", "serialize", "escape-html", "async-tokio"] }
rquickjs = { version = "0.12.0", features = ["full-async", "macro", "loader", "dump-leaks", "disable-assertions"] }
clap = { version = "4.6.1", features = ["color", "derive", "string"] }
tokio = { version = "1.52.3", features = ["process", "fs", "io-util", "rt-multi-thread", "macros", "time", "signal"] }
tokio-util = "0.7.18"
futures = "0.3.32"
thiserror = { version = "2.0.18", features = ["std"] }
colored = { version = "3.1.1", features = ["no-color"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
camino = { version = "1.2.2", features = [] }
chrono = "0.4.45"
libc = "0.2.186"
oxc_ast = "0.133.0"
url = "2.5.8"
parking_lot = "0.12.5"
async-stream = "0.3.6"
base64 = "0.22.1"
hex = "0.4.3"
percent-encoding = "2.3.2"
windows-sys = { version = "0.61.2", features = ["Win32_System_Threading"] }
md-5 = "0.11.0"
sha1 = "0.11.0"
sha2 = "0.11.0"
blake3 = "1.8.5"
digest = "0.11.3"

js_core = { path = "crates/js_core" }
js_module_derive = { path = "crates/js_module_derive" }
console = { path = "crates/console" }
fs = { path = "crates/fs" }
process = { path = "crates/process" }
os-path = { path = "crates/os-path" }
js_path = { path = "crates/js_path" }
inq = { path = "crates/inq" }
sys = { path = "crates/sys" }
js_error_derive = { path = "crates/js_error_derive" }
imp_clap = { path = "crates/clap" }
embed = { path = "crates/embed" }
parsers = { path = "crates/parsers" }
fetch = { path = "crates/fetch" }
imp_url = { path = "crates/url" }
imp_chrono = { path = "crates/chrono" }
subprocess = { path = "crates/subprocess" }
encoding = { path = "crates/encoding" }
env = { path = "crates/env" }
ffi_extra = { path = "crates/ffi_extra" }
hash = { path = "crates/hash" }
crypto = { path = "crates/crypto" }
signal = { path = "crates/signal" }

# [patch.crates-io]
# rquickjs = { path = "../rquickjs" }
# rquickjs-core = { path = "../rquickjs/core" }
# rquickjs-sys = { path = "../rquickjs/sys" }
# rquickjs-macro = { path = "../rquickjs/macro" }
