[package]
version = "0.1.0"
name = "cli"
edition.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
clap.workspace = true

fs.workspace = true
camino.workspace = true
js_core.workspace = true
os-path.workspace = true
console.workspace = true
process.workspace = true
js_path.workspace = true
inq.workspace = true
sys.workspace = true
imp_clap.workspace = true
embed.workspace = true
parsers.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
