[package]
version = "0.1.0"
name = "cli"
edition.workspace = true
authors.workspace = true

[[bin]]
name = "imp"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
clap.workspace = true

fs.workspace = true
camino.workspace = true
js_core.workspace = true
os-path.workspace = true
console.workspace = true
process.workspace = true
js_path.workspace = true
inq.workspace = true
sys.workspace = true
imp_clap.workspace = true
embed.workspace = true
parsers.workspace = true
fetch.workspace = true
imp_url.workspace = true
imp_chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
subprocess.workspace = true
encoding.workspace = true
env.workspace = true
ffi_extra.workspace = true
hash.workspace = true
signal.workspace = true
crypto.workspace = true
rustls.workspace = true
