[package]
name = "fs"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
base64 = "0.22.1"
encoding_rs = "0.8.35"
hex = "0.4.3"
globset = "0.4.18"
dirs = "6.0.0"

tokio.workspace = true
futures.workspace = true
js_core.workspace = true
os-path.workspace = true
rquickjs.workspace = true
thiserror.workspace = true
tracing.workspace = true
