[package]
name = "hash"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
rquickjs.workspace = true
js_core.workspace = true
thiserror.workspace = true
base64.workspace = true
hex.workspace = true
md-5.workspace = true
sha1.workspace = true
sha2.workspace = true
blake3.workspace = true
digest.workspace = true
