[package]
name = "inq"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
inquire = { version = "0.9.4", features = ["fuzzy", "date", "macros", "editor"] }

chrono.workspace = true
rquickjs.workspace = true
js_core.workspace = true
thiserror.workspace = true
tokio.workspace = true
