[package]
name = "parsers"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
js_core.workspace = true
rquickjs.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
quick-xml.workspace = true
thiserror.workspace = true
toml.workspace = true
csv = "1.4.0"
rmp-serde = "1.3.1"
ron = "0.12.1"
