[package]
name = "subprocess"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
rquickjs.workspace = true
js_core.workspace = true
tokio.workspace = true
tokio-util.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
async-stream.workspace = true
